fix: prevent cursor from messing with text spacing

--- a/frontend/src/components/typing-container/Cursor.css
+++ b/frontend/src/components/typing-container/Cursor.css
@@ -1,3 +1,5 @@
 #cursor {
   border: 1px solid black;
+  position: absolute;
+  height: 1.9rem;
 }
